--- a/app/views/menus/_html_type.html.erb
+++ b/app/views/menus/_html_type.html.erb
@@ -5,5 +5,5 @@
 
      <p>
         <b>HTML Code:</b><br>
-        <%=editablefieldcreate("rawhtml", @menu)%>
+        <%=editablefieldcreate2("rawhtml", @menu)%>
       </p>
