--- a/public/stylesheets/menus.css
+++ b/public/stylesheets/menus.css
@@ -42,6 +42,7 @@ border-style: dotted;
 margin: auto;
 padding:10px;
 margin-top: -8px;
+margin-bottom:25px;
 display: block;
 position: relative;
 
