--- a/public/stylesheets/pro_drop_1.css
+++ b/public/stylesheets/pro_drop_1.css
@@ -14,18 +14,18 @@ way to fit your requirements.
 
 #navi {padding:0; margin:0; list-style:none; height:27px; background:#fff; position:relative; z-index:500; font-family:'Times New Roman',Times,serif}
 #navi li.top {display:block; float:left;}
-#navi li a.top_link {border-right: black 1px solid; display:block; float:left; height:20px; line-height:20px; color:black; text-decoration:none; font-size:16px; font-weight:bold; padding:0 0 0 0px; cursor:pointer;background:white;}
-#navi li a.last_link {border-right: black 0px solid; display:block; float:left; height:20px; line-height:20px; color:black; text-decoration:none; font-size:16px; font-weight:bold; padding:0 0 0 0px; cursor:pointer;background:white;}
+#navi li a.top_link {border-right: black 0px solid; display:block; float:left; height:20px; line-height:20px; color:#00005F; text-decoration:none; font-size:16px; font-weight:normal; padding:0 0 0 0px; cursor:pointer;background:white;}
+#navi li a.last_link {border-right: black 0px solid; display:block; float:left; height:20px; line-height:20px; color:#00005F; text-decoration:none; font-size:16px; font-weight:normal; padding:0 0 0 0px; cursor:pointer;background:white;}
 
 
 #navi li a.top_link span {float:left; display:block; padding:0 10px 0 10px; height:20px;background:white right top;}
 
 #navi li a.top_link span.down {float:left; display:block; padding:0 10px 0 10px; height:20px; background:white no-repeat right top;}
-#navi li a.top_link:hover {color:#fff; background: white no-repeat;}
+#navi li a.top_link:hover {color:#00005F; text-decoration: underline; background: white no-repeat;}
 #navi li a.top_link:hover span {background:white no-repeat right top;}
 #navi li a.top_link:hover span.down {background:white no-repeat right top;}
 
-#navi li:hover > a.top_link {color:red; background: white no-repeat;}
+#navi li:hover > a.top_link {color:black; background: white no-repeat;}
 #navi li:hover > a.top_link span {background:white no-repeat right top;}
 #navi li:hover > a.top_link span.down {background:white no-repeat right top;}
 
@@ -42,7 +42,7 @@ way to fit your requirements.
 {position:absolute; left:-9999px; top:-9999px; width:0; height:0; margin:0; padding:0; list-style:none;}
 
 #navi li:hover ul.sub
-{left:0; top:20px; background: #fff; padding:3px; border:1px solid red; white-space:nowrap; width:90px; height:auto; z-index:300;}
+{left:0; top:20px; background: #fff; padding:3px; border:1px solid #00005F; white-space:nowrap; width:90px; height:auto; z-index:300;}
 #navi li:hover ul.sub li
 {display:block; height:20px; position:relative; float:left; width:90px; font-weight:normal;}
 #navi li:hover ul.sub li a
@@ -50,9 +50,9 @@ way to fit your requirements.
 #navi li ul.sub li a.fly
 {background:#fff url(/images/pro-dropdown/arrow.gif) 80px 7px no-repeat;}
 #navi li:hover ul.sub li a:hover
-{background:#3a93d2; color:#fff;}
+{background:#00005F; color:#fff;}
 #navi li:hover ul.sub li a.fly:hover
-{background:#3a93d2 url(/images/pro-dropdown/arrow_over.gif) 80px 7px no-repeat; color:red;}
+{background:#3a93d2 url(/images/pro-dropdown/arrow_over.gif) 80px 7px no-repeat; color:#00005F;}
 
 #navi li:hover ul li:hover > a.fly {background:#3a93d2 url(/images/pro-dropdown/arrow_over.gif) 80px 7px no-repeat; color:#fff;}
 
@@ -65,7 +65,7 @@ way to fit your requirements.
     top:-4px;
     background: #fff;
     padding:3px;
-    border:1px solid red;
+    border:1px solid #00005F;
     white-space:nowrap;
     width:90px;
     z-index:400;
