--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -37,8 +37,8 @@
     <div class="myaccountheading myaccountheadingmce">Body</div>
         <div class="myaccountcontent">
 
-      <% form_for(@page) do |f| %>
-  <%= f.submit "Update" %><br>
+      <% form_for(@page, :remote=>true) do |f| %>
+  <%#= f.submit "Update"%><br>
 
         <center>
           <%= f.text_area :body, :class => "mceEditor"%>
