--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,7 @@
     <table width="970" height="400" align="center" cellspacing="0" cellpadding="10">
       <tbody>
         <tr align="center" height="200" valign="top">
-          <td width="160" bgcolor="00005F" rowspan="2" style="background-image: url(images/bg-left.gif); background-repeat: repeat-y; background-position: right;">
+          <td width="160" bgcolor="00005F" rowspan="2" style="background-image: url(/images/bg-left.gif); background-repeat: repeat-y; background-position: right;">
             <div id="headerTop">
               <% if session[:user_id] then %>
                 <%= link_to 'Sign Out',{ :controller => :admin, :action =>'logout'},:class=>"navmenu3" %> <br>
@@ -119,7 +119,7 @@
             <%= buildverticlemenu  :menu_id=>"Left Menu",:prehtml=>'', :posthtml=>'' %>
             </div>
           </td>
-          <td width="750" bgcolor="FFFFFF" align="left" style="background-image: url(images/shadow.jpg); background-repeat: repeat-x; padding: 0px; margin: 0px;">
+          <td width="750" bgcolor="FFFFFF" align="left" style="background-image: url(/images/shadow.jpg); background-repeat: repeat-x; padding: 0px; margin: 0px;">
             <br>
             <div class="scroll">
               <table width="100%" border="0" cellspacing="0" cellpadding="0">
