updated picture of bob with some css to fix table issues.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
           <td>
 <table id="header-table" width="970" align="center" bgcolor="#00005F">
 	<tbody><tr height="200">
-		<td width="160" bgcolor="FFFFFF"><img src="/images/docbob2.jpg"></td><td><img src="/images/masthead.jpg"></td>
+		<td width="160" bgcolor="#00005F"><img src="/images/docbob2.jpg" border="1" style="border-color:white"></td><td><img src="/images/masthead.jpg"></td>
 		
 	</tr>
 </tbody></table>
