--- a/public/stylesheets/votedocbob.css
+++ b/public/stylesheets/votedocbob.css
@@ -26,7 +26,7 @@
 .style11 {color:#FF0000; font-size:16px; font-family: calibri;}
 
 body {
-    background-color: #00005F;
+    background-color: #FFFFFF;
 }
 
 h4
