Updated some table defs and css to put blue border around content.

--- a/app/views/widgets/_main_tabnav.html.erb
+++ b/app/views/widgets/_main_tabnav.html.erb
@@ -32,6 +32,7 @@ render_tabnav :main do
   tab_link_to 'Users',     :controller => 'users', :action=>'index'
   tab_link_to 'Rights',     :controller=> 'rights', :action=>'index'
   tab_link_to 'Roles',     :controller=> 'roles', :action=>'index'
+  tab_link_to 'My Customers',     :controller=> 'sales_force', :action=>'customer_list'
 
 #  add_tab do |t|
 #    t.named 'Home'
