--- a/public/stylesheets/votedocbob.css
+++ b/public/stylesheets/votedocbob.css
@@ -47,6 +47,8 @@ a:hover {color: #000000; text-decoration: underline;}
     border-style: solid;
     border-width: 1px;
     border-color: #FFFFFF;
+    border-color: #00005F;
+    border-width:3px;
     }
 .wrapi
     {
@@ -58,13 +60,18 @@ a:hover {color: #000000; text-decoration: underline;}
 
 .masthead-top
     {
-    width: 970px;
+    width: 972px;
     background-color: #FFFFFF;
     background-image: url(/images/shadow.jpg);
     background-repeat:repeat-x;
     text-align: center;
     margin: 0px;
     padding: 0px;
+    
+    border-width: 3px;
+border-color: #00005F;
+border-style:solid;
+
     }
 
 .header
