Updated some table defs and css to put blue border around content.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -225,7 +225,7 @@ border-width: 1px;
     background-color:transparent;
     border: none none black;	
     padding-top: 30px;
-    color:white;
+    color:#00005F;
     font-weight:bold;
     letter-spacing: 10px;
 }
