--- a/public/stylesheets/votedocbob.css
+++ b/public/stylesheets/votedocbob.css
@@ -113,7 +113,7 @@ div.scroll {
 .paid-footer {
     font-family: constantia;
     font-size: 12px;
-    color:#CCCCCC;
+    color:#00005F;
     font-weight:bolder;
     margin:20px;
 }
