--- a/app/views/menus/_html_type.html.erb
+++ b/app/views/menus/_html_type.html.erb
@@ -5,5 +5,13 @@
 
      <p>
         <b>HTML Code:</b><br>
-        <%=editablefieldcreate2("rawhtml", @menu)%>
+             <% form_for(@menu, :remote=>true) do |f| %>
+  <%#= f.submit "Update"%><br>
+
+        <center>
+          <%= f.text_area :rawhtml, :class => "mceEditor"%>
+        </center>
+          <br>
+      <% end %>
+        <%#=editablefieldcreate2("rawhtml", @menu)%>
       </p>
