--- a/app/views/attachments/_show_attachment_list.html.erb
+++ b/app/views/attachments/_show_attachment_list.html.erb
@@ -22,7 +22,7 @@
 		    <br/>
 		    <%= link_to 'Cancel', 'javascript:void(0)', :onclick => "cancel_image();return false;"%>
 	  </div>
-	    <%= link_to_function( image_tag( p.image.url( :small_thumb ), :alt => p.image.name ), "select_image(this)" )%>
+	    <%= link_to_function( image_tag( p.image.url( :small_thumb ), :alt => p.image.name ), "select_image(this)" , :class=>"image-link")%>
     <% else%>
 	    <%= link_to p.original_file_name, p.original.url, :onclick => "select_thumb(this);return false;"%>&nbsp;&nbsp;&nbsp;
     <% end%>
@@ -31,7 +31,8 @@
 </ul>
 <br style="clear:both;" />
 <div style="float:right;margin-bottom:10px;">
-<%#= will_paginate @attachments, :class => "pagination", :previous_label => "&laquo; previous",  :next_label => "next &raquo;", :renderer => 'RemoteLinkRenderer' %>
+  <%#= paginate(@attachments , :class => "pagination", :previous_label => "&laquo; previous",  :next_label => "next &raquo;", :renderer => 'RemoteLinkRenderer') %>
+  <%= paginate(@attachments, :remote=>true) %>
 </div>
 <% else %>
 No <%= params[ :media ]%> Uploaded Yet.
